jquery를 import로 바꿈

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "electron_practice_02",
+  "name": "electron_ipc_example",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/main/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron .",
     "build": "webpack",
     "watch": "webpack -w",
     "electron": "electron ."
@@ -14,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^1.7.8",
+    "jquery": "^3.2.1",
     "request": "^2.83.0",
     "xml2js": "^0.4.19"
   }
